<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cybergear_socketcan_driver</name>
  <version>0.0.1</version>
  <description>CyberGear driver using SocketCAN</description>
  <maintainer email="naoki.takahashi060@gmail.com">Naoki Takahashi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>can_msgs</depend>
  <depend>cybergear_driver_msgs</depend>
  <depend>std_srvs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>diagnostic_updater</depend>
  <build_depend>generate_parameter_library</build_depend>
  <build_depend>cybergear_driver_core</build_depend>
  <exec_depend>ros2_socketcan</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
